<resources>
    <string name="app_name">Single Screen App</string>
    <string name="cover_photo">Cover photo</string>
    <string name="username">Faculty of Engineering</string>
    <string name="email">fac_something@eng.com</string>
    <string name="employees">6000 Students, 20 Employees</string>
    <string name="rating">0.0 / 5.0</string>
    <string name="badges">Badges</string>
    <string name="time_waster">Time Waster</string>
    <string name="creativity_killer">Creativity Killer</string>
    <string name="zombies_factory">Zombie Factory</string>
    <string name="see_more">See More</string>
    <string name="general_details">General Details</string>
    <string name="picture">Picture</string>
</resources>
